problem on blog on Iphone solved

--- a/style/mogo-responsive.css
+++ b/style/mogo-responsive.css
@@ -292,7 +292,6 @@
 	}
 	#blogHome img{
 		width: 100%;
-		height: 100%;
 	}
 	.blogHomeDetails{
 		flex-direction: column;
